--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,70 +1,35 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
+@article{Mendoza-Cardenas2012,
+abstract = {Spectrum sensing is a key function for the dynamic spectrum access. Filter bank-based multi-carrier communication techniques have been proposed as potential candidates for the physical layer of secondary users since can be used for both data communication and spectrum sensing with no additional cost. In this paper we evaluate one of these techniques, OFDM-OQAM, from the point of view of its misdetection probability as a function of the SNR and considering the multipath effect in the channel. It is showed that OFDM-OQAM outperforms the periodogram for low SNR values. OFDM-OQAM COMO T{\'{E}}CNICA DE SENSADO DEL ESPECTRO RESUMEN El sensado del espectro es una funci{\'{o}}n clave para acceder a {\'{e}}ste din{\'{a}}micamente. Diversas t{\'{e}}cnicas de comunicaci{\'{o}}n multiportadora basadas en bancos de filtros han sido propuestas como candidatas potenciales para la capa f{\'{i}}sica de usuarios secundarios, ya que pueden ser usadas tanto para la comunicaci{\'{o}}n de datos como para el sensado del espectro sin un costo adicional. En este art{\'{i}}culo se eval{\'{u}}a una de estas t{\'{e}}cnicas, OFDM-OQAM, desde el punto de vista de su probabilidad de no detecci{\'{o}}n como funci{\'{o}}n de la relaci{\'{o}}n se{\~{n}}al a ruido y considerando el efecto multitrayectoria del canal. Se muestra que OFDM-OQAM presenta un mejor desempe{\~{n}}o que el periodograma para valores bajos de relaci{\'{o}}n se{\~{n}}al a ruido. Palabras clave: Sensado del espectro, acceso din{\'{a}}mico al espectro, OFDM-OQAM, bancos de filtros},
+author = {Mendoza-Cardenas, Carlos H. and {Gaviria G{\'{o}}mez}, Natalia},
+file = {:home/cmendoza/myResearchPapers/Msc{\_}Journal.pdf:pdf},
+journal = {Rev. Polit{\'{e}}cnica},
+keywords = {Dynamic Spectrum Access,OFDM-OQAM,Spectrum sensing,filter bank},
+pages = {19--24},
+title = {{OFDM-OAQM as spectrum sensing technique}},
+url = {https://biblat.unam.mx/en/revista/revista-politecnica/articulo/ofdm-oqam-as-spetrum-sensing-technique},
+volume = {8},
+year = {2012}
 }
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+@inproceedings{Mendoza-Cardenas2021,
+abstract = {Seizures are one of the defining symptoms in pa- tients with epilepsy, and due to their unannounced occurrence, they can pose a severe risk for the individual that suffers it. New research efforts are showing a promising future for the prediction and preemption of imminent seizures, and with those efforts, a vast and diverse set of features have been proposed for seizure prediction algorithms. However, the data-driven discovery of nonsinusoidal waveforms for seizure prediction is lacking in the literature, which is in stark contrast with recent works that show the close connection between the waveform morphology of neural oscillations and the physiology and pathophysiology of the brain, and especially its use in effectively discriminating between normal and abnormal oscillations in electrocorticographic (ECoG) recordings of epileptic patients. Here, we explore a scalable, energy-guided waveform search strategy on spatially-projected continuous multi-day ECoG data sets. Our work shows that data-driven waveform learning methods have the potential to not only contribute features with predictive power for seizure prediction, but also to facilitate the discovery of oscillatory patterns that could contribute to our understanding of the pathophysiology and etiology of seizures.},
+author = {Mendoza-Cardenas, Carlos H. and Brockmeier, Austin J},
+booktitle = {10th Int. IEEE EMBS Conf. Neural Eng.},
+file = {:home/cmendoza/myResearchPapers/NER21{\_}final.pdf:pdf},
+pages = {4},
+title = {{Searching for waveforms on spatially-filtered epileptic ECoG}},
+year = {2021},
+pdf = {NER21.pdf}
 }
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  selected={true}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@inproceedings{Mendoza-Cardenas2013,
+address = {Las Vegas, USA},
+author = {Mendoza-Cardenas, Carlos H. and {Gaviria G{\'{o}}mez}, Natalia},
+booktitle = {2013 Int. Conf. Wirel. Networks},
+file = {:home/cmendoza/myResearchPapers/Msc{\_}ICWN13.pdf:pdf},
+pages = {7},
+title = {{Evaluation of OFDM-OQAM as Spectrum Sensing Technique}},
+url = {https://search.proquest.com/openview/ece445ad7824623542556500bf2d8b67},
+year = {2013}
 }
