--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 
 @article{Mendoza-Cardenas2012,
-abstract = {Spectrum sensing is a key function for the dynamic spectrum access. Filter bank-based multi-carrier communication techniques have been proposed as potential candidates for the physical layer of secondary users since can be used for both data communication and spectrum sensing with no additional cost. In this paper we evaluate one of these techniques, OFDM-OQAM, from the point of view of its misdetection probability as a function of the SNR and considering the multipath effect in the channel. It is showed that OFDM-OQAM outperforms the periodogram for low SNR values. OFDM-OQAM COMO T{\'{E}}CNICA DE SENSADO DEL ESPECTRO RESUMEN El sensado del espectro es una funci{\'{o}}n clave para acceder a {\'{e}}ste din{\'{a}}micamente. Diversas t{\'{e}}cnicas de comunicaci{\'{o}}n multiportadora basadas en bancos de filtros han sido propuestas como candidatas potenciales para la capa f{\'{i}}sica de usuarios secundarios, ya que pueden ser usadas tanto para la comunicaci{\'{o}}n de datos como para el sensado del espectro sin un costo adicional. En este art{\'{i}}culo se eval{\'{u}}a una de estas t{\'{e}}cnicas, OFDM-OQAM, desde el punto de vista de su probabilidad de no detecci{\'{o}}n como funci{\'{o}}n de la relaci{\'{o}}n se{\~{n}}al a ruido y considerando el efecto multitrayectoria del canal. Se muestra que OFDM-OQAM presenta un mejor desempe{\~{n}}o que el periodograma para valores bajos de relaci{\'{o}}n se{\~{n}}al a ruido. Palabras clave: Sensado del espectro, acceso din{\'{a}}mico al espectro, OFDM-OQAM, bancos de filtros},
+abstract = {Spectrum sensing is a key function for the dynamic spectrum access. Filter bank-based multi-carrier communication techniques have been proposed as potential candidates for the physical layer of secondary users since can be used for both data communication and spectrum sensing with no additional cost. In this paper we evaluate one of these techniques, OFDM-OQAM, from the point of view of its misdetection probability as a function of the SNR and considering the multipath effect in the channel. It is showed that OFDM-OQAM outperforms the periodogram for low SNR values.},
 author = {Mendoza-Cardenas, Carlos H. and {Gaviria G{\'{o}}mez}, Natalia},
 file = {:home/cmendoza/myResearchPapers/Msc{\_}Journal.pdf:pdf},
 journal = {Rev. Polit{\'{e}}cnica},
@@ -21,7 +21,8 @@ file = {:home/cmendoza/myResearchPapers/NER21{\_}final.pdf:pdf},
 pages = {4},
 title = {{Searching for waveforms on spatially-filtered epileptic ECoG}},
 year = {2021},
-pdf = {NER21.pdf}
+arxiv = {2103.13853},
+code = {https://github.com/chmendoza/cspwave}
 }
 @inproceedings{Mendoza-Cardenas2013,
 address = {Las Vegas, USA},
